--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,7 +2,7 @@
 
   <ion-tab-bar color="light" slot="bottom">
 
-    <ion-tab-button tab="home">
+    <ion-tab-button tab="top-chef">
       <ion-icon name="home"></ion-icon>
     </ion-tab-button>
 
@@ -26,4 +26,4 @@
 
 </ion-tabs>
 
-<ion-nav [root]="rootPage"></ion-nav>
+<!--<ion-nav [root]="rootPage"></ion-nav>-->
