--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,28 +2,18 @@
 
   <ion-tab-bar color="light" slot="bottom">
 
-    <ion-tab-button tab="top-chef">
+    <ion-tab-button tab="tab1">
       <ion-icon name="home"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="calendar"></ion-icon>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab3">
-      <ion-icon name="search"></ion-icon>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="community">
       <ion-icon name="add"></ion-icon>
     </ion-tab-button>
 
-  <ion-tab-button tab="tab3">
+  <ion-tab-button tab="profile">
     <ion-icon name="person"></ion-icon>
   </ion-tab-button>
 
 </ion-tab-bar>
 
 </ion-tabs>
-
-<!--<ion-nav [root]="rootPage"></ion-nav>-->
