En cours de dev

--- a/src/app/Community/tab2/tab2.page.html
+++ b/src/app/Community/tab2/tab2.page.html
@@ -26,7 +26,7 @@
 
     <div class="story">
       <div class="add_story">
-        <img src="../../assets/profile-img-4.jpg">
+        <img src="../../../assets/profile-img-4.jpg">
         <ion-icon color="primary" name="add-circle"></ion-icon>
       </div>
       <p style="color: #86888f">Manon Derydt</p>
@@ -34,7 +34,7 @@
 
     <div class="story">
       <div class="img-box">
-        <img src="../../assets/profile-img-4.jpg">
+        <img src="../../../assets/profile-img-4.jpg">
       </div>
       <div>
         <p></p>
@@ -42,7 +42,7 @@
     </div>
     <div class="story">
       <div class="img-box">
-        <img src="../../assets/profile-img-5.jpg">
+        <img src="../../../assets/profile-img-5.jpg">
       </div>
       <div>
         <p>Ivan Boole</p>
@@ -51,7 +51,7 @@
 
     <div class="story">
       <div class="img-box">
-        <img src="../../assets/profile-img-4.jpg">
+        <img src="../../../assets/profile-img-4.jpg">
       </div>
       <div>
         <p>Ivan Boole</p>
@@ -60,7 +60,7 @@
 
     <div class="story">
       <div class="img-box">
-        <img src="../../assets/profile-img-5.jpg">
+        <img src="../../../assets/profile-img-5.jpg">
       </div>
       <div>
         <p>Ivan Boole</p>
@@ -69,7 +69,7 @@
 
     <div class="story">
       <div class="img-box">
-        <img src="../../assets/profile-img-4.jpg">
+        <img src="../../../assets/profile-img-4.jpg">
       </div>
       <div>
         <p>Ivan Boole</p>
@@ -78,7 +78,7 @@
 
     <div class="story">
       <div class="img-box">
-        <img src="../../assets/profile-img-5.jpg">
+        <img src="../../../assets/profile-img-5.jpg">
       </div>
       <div>
         <p>Ivan Boole</p>
@@ -87,7 +87,7 @@
 
     <div class="story">
       <div class="img-box">
-        <img src="../../assets/profile-img-4.jpg">
+        <img src="../../../assets/profile-img-4.jpg">
       </div>
       <div>
         <p>Ivan Boole</p>
@@ -96,7 +96,7 @@
 
     <div class="story">
       <div class="img-box">
-        <img src="../../assets/profile-img-5.jpg">
+        <img src="../../../assets/profile-img-5.jpg">
       </div>
       <div>
         <p>Ivan Boole</p>
@@ -105,7 +105,7 @@
 
     <div class="story">
       <div class="img-box">
-        <img src="../../assets/profile-img-4.jpg">
+        <img src="../../../assets/profile-img-4.jpg">
       </div>
       <div>
         <p>Ivan Boole</p>
@@ -114,7 +114,7 @@
 
     <div class="story">
       <div class="img-box">
-        <img src="../../assets/profile-img-5.jpg">
+        <img src="../../../assets/profile-img-5.jpg">
       </div>
       <div>
         <p>Ivan Boole</p>
@@ -123,7 +123,7 @@
 
     <div class="story">
       <div class="img-box">
-        <img src="../../assets/profile-img-4.jpg">
+        <img src="../../../assets/profile-img-4.jpg">
       </div>
       <div>
         <p>Ivan Boole</p>
@@ -135,13 +135,13 @@
 
   <ion-item lines="none">
     <ion-avatar slot="start">
-      <img src="../../assets/profile-img-5.jpg">
+      <img src="../../../assets/profile-img-5.jpg">
     </ion-avatar>
     <ion-label>Booling</ion-label>
     <ion-icon name="ellipsis-horizontal"></ion-icon>
   </ion-item>
 
-  <img class="post_img" src="../../assets/post-1.jpg">
+  <img class="post_img" src="../../../assets/post-1.jpg">
 
   <div class="flex-button">
     <div>
@@ -161,13 +161,13 @@
 
   <ion-item lines="none">
     <ion-avatar slot="start">
-      <img src="../../assets/profile-img-4.jpg">
+      <img src="../../../assets/profile-img-4.jpg">
     </ion-avatar>
     <ion-label>Concert</ion-label>
     <ion-icon name="ellipsis-horizontal"></ion-icon>
   </ion-item>
 
-  <img class="post_img" src="../../assets/post-2.jpg">
+  <img class="post_img" src="../../../assets/post-2.jpg">
 
   <div class="flex-button">
     <div>
@@ -187,13 +187,13 @@
 
   <ion-item lines="none">
     <ion-avatar slot="start">
-      <img src="../../assets/profile-img-5.jpg">
+      <img src="../../../assets/profile-img-5.jpg">
     </ion-avatar>
     <ion-label>Réalité virtuelle</ion-label>
     <ion-icon name="ellipsis-horizontal"></ion-icon>
   </ion-item>
 
-  <img class="post_img" src="../../assets/post-6.jpg">
+  <img class="post_img" src="../../../assets/post-6.jpg">
 
   <div class="flex-button">
     <div>
@@ -213,13 +213,13 @@
 
   <ion-item lines="none">
     <ion-avatar slot="start">
-      <img src="../../assets/profile-img-4.jpg">
+      <img src="../../../assets/profile-img-4.jpg">
     </ion-avatar>
     <ion-label>Restaurant</ion-label>
     <ion-icon name="ellipsis-horizontal"></ion-icon>
   </ion-item>
 
-  <img class="post_img" src="../../assets/post-4.jpg">
+  <img class="post_img" src="../../../assets/post-4.jpg">
 
   <div class="flex-button">
     <div>
@@ -239,13 +239,13 @@
 
   <ion-item lines="none">
     <ion-avatar slot="start">
-      <img src="../../assets/profile-img-5.jpg">
+      <img src="../../../assets/profile-img-5.jpg">
     </ion-avatar>
     <ion-label>Cinéma</ion-label>
     <ion-icon name="ellipsis-horizontal"></ion-icon>
   </ion-item>
 
-  <img class="post_img" src="../../assets/post-5.jpg">
+  <img class="post_img" src="../../../assets/post-5.jpg">
 
   <div class="flex-button">
     <div>
