--- a/src/app/Community/tab2/tab2.page.scss
+++ b/src/app/Community/tab2/tab2.page.scss
@@ -26,7 +26,7 @@ ion-header img{
 .stories .img-box{
   margin-left: 8px;
   margin-right: 12px;
-  background-image: url("../../assets/color-instagram.jpg");
+  background-image: url("../../../assets/color-instagram.jpg");
   background-size: contain;
   border-radius: 50%;
   padding: 2px;
@@ -74,7 +74,7 @@ hr{
 ion-avatar{
   margin-left: 8px;
   margin-right: 12px;
-  background-image: url("../../assets/color-instagram.jpg");
+  background-image: url("../../../assets/color-instagram.jpg");
   background-size: contain;
   border-radius: 50%;
   padding: 2px;
