--- a/src/app/home/tab1/tab1.page.html
+++ b/src/app/home/tab1/tab1.page.html
@@ -12,7 +12,7 @@
   <h2>ImitChef</h2>
   <h2 class="font-home-page-title">La plateforme qui rassemble vos</h2>
 </div>
-<img src="/assets/chef-1.jpg" alt="toque">
+<img src="/src/assets/chef-1.jpg" alt="toque">
 
   <ion-button shape="round" expand="block" type="submit" submit="!formInfos.valid" routerLink="/choose-emission" class="button-home" color="warning">Choisissez votre émission</ion-button>
 
