--- a/src/app/community/agora/agora.page.scss
+++ b/src/app/community/agora/agora.page.scss
@@ -110,3 +110,16 @@ ion-label{
   font-size: 15px;
   margin: 4px;
 }
+
+.grid{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.img_box {
+  border: 1px solid white;
+  width: 33.3%;
+  padding-bottom: 31%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
