--- a/src/app/home/tv_shows/show/search/search.page.html
+++ b/src/app/home/tv_shows/show/search/search.page.html
@@ -11,7 +11,7 @@
   </ion-toolbar>
   <div class="ion-padding">
     <ion-list>
-      <ion-item (click)="selectVal(item.name)" *ngFor="let item of jsonData" routerLink="/top-chef" >{{item.name}}</ion-item>
+      <ion-item (click)="selectVal(item.name)" *ngFor="let item of jsonData" routerLink="/show" >{{item.name}}</ion-item>
     </ion-list>
   </div>
 </ion-content>
