--- a/src/app/home/tv_shows/choose-show/choose-show.page.html
+++ b/src/app/home/tv_shows/choose-show/choose-show.page.html
@@ -7,24 +7,16 @@
 </ion-header>
 <ion-content>
 
-<h2>Choisissez votre émission</h2>
-  <div class="flex">
-    <ion-card class="button-tv-show" routerLink="/top-chef">
-      <img src="../../../../assets/top-chef-home.jpg" alt="img-top-chef">
-      <p>Top chef</p>
-    </ion-card>
-    <ion-card class="button-tv-show" routerLink="/le-meilleur-patissier">
-      <img src="../../../../assets/le-meilleur-patissier-home.jpeg" alt="">
-    </ion-card>
-  </div>
-  <div class="flex">
-    <ion-card class="button-tv-show" routerLink="/objectif-top-chef">
-      <img src="../../../../assets/objectif-top-chef-home.jpeg" alt="">
-    </ion-card>
-    <ion-card class="button-tv-show" routerLink="/tous-en-cuisine">
-      <img src="../../../../assets/tous-en-cuisine-home.jpg" alt="">
-    </ion-card>
-  </div>
+    <h2>Choisissez votre émission</h2>
+
+<div *ngFor="let show of shows">
+    <div class="flex">
+        <ion-card class="button-tv-show" routerLink="/show">
+            <img src="{{ show.image }}" alt="{{ show.name }}">
+            <p>{{ show.name }}</p>
+        </ion-card>
+    </div>
+</div>
 
 </ion-content>
 
