Réorganisation du module 'tv_shows' (routes, modules, pages) + MAJ des fonctions pour récupérer toutes les émissions et une émission grâce à l'id. Un peu de nettoyage en supprimant le code commenté. Affichage du nom de l'émission dans la page d'une mission.

--- a/src/app/home/tv_shows/choose-show/choose-show.page.html
+++ b/src/app/home/tv_shows/choose-show/choose-show.page.html
@@ -11,7 +11,7 @@
 
 <div *ngFor="let show of shows" (click)="openShowById(show)">
     <div class="flex">
-        <ion-card class="button-tv-show" routerLink="/show">
+        <ion-card class="button-tv-show">
             <img src="{{ show.image }}" alt="{{ show.name }}">
             <p>{{ show.name }}</p>
         </ion-card>
