Ajout de la route qui affiche les recettes par leurs ID + correction

--- a/src/app/home/tv_shows/show/show.page.scss
+++ b/src/app/home/tv_shows/show/show.page.scss
@@ -19,8 +19,8 @@ ion-header img{
 }
 
 .stories{
-  display: flex;
-  overflow: scroll;
+  display: flex !important;
+  overflow: scroll !important;
 }
 
 .stories .img-box{
