--- a/src/app/home/reciepe/reciepe.page.html
+++ b/src/app/home/reciepe/reciepe.page.html
@@ -1,7 +1,10 @@
+
+<h1>Hello world</h1>
 <ion-header>
   <ion-toolbar>
     <ion-back-button color="warning" slot="start"></ion-back-button>
     <ion-title>Reciepe</ion-title>
+    <h3>{{reciepe.name}}</h3>
   </ion-toolbar>
 </ion-header>
 
