--- a/src/app/home/tv_shows/show/show.page.html
+++ b/src/app/home/tv_shows/show/show.page.html
@@ -1,12 +1,57 @@
 <ion-header>
   <ion-toolbar>
     <ion-back-button color="warning" slot="start"></ion-back-button>
-    <ion-title>Show </ion-title>
+    <ion-title>Show</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-text>
-    L'émission : {{ show.name }}
-  </ion-text>
+
+  <h1>{{ show.name }}</h1>
+  <h2>{{ candidatesOftheShow.tv_show }}</h2>
+  <ion-buttons slot="start">
+    <ion-button color="dark">
+      <ion-icon slot="icon-only" name="camera"></ion-icon>
+    </ion-button>
+  </ion-buttons>
+
+  <div class="stories">
+
+    <div *ngFor="let candidate of candidates">
+      <div>
+        <div class="story">
+          <div class="img-box" (click)="openShowCandidateById()">
+            <img src="{{ candidate.image }}">
+          </div>
+          <p>{{ candidate.firstname }}</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div *ngFor="let reciepe of reciepes" (click)="openReciepeById(reciepe)" >
+
+    <ion-item no-padding lines="none">
+      <ion-avatar slot="start"></ion-avatar>
+      <ion-icon slot="end" name="more"></ion-icon>
+    </ion-item>
+    <div >
+      <img class="post_img" src="{{ reciepe.image }}" >
+      <div class="flex-button">
+        <div>
+          <ion-icon name="heart"></ion-icon>
+          <ion-icon name="text"></ion-icon>
+          <ion-icon name="send"></ion-icon>
+        </div>
+        <ion-icon name="bookmark"></ion-icon>
+      </div>
+      <p class="insta-text"><b>2.875 Likes</b></p>
+      <p class="insta-text"><b>{{ reciepe.title }}</b>
+        {{ reciepe.description }}
+      </p>
+    </div>
+
+  </div>
+
 </ion-content>
