--- a/src/app/home/reciepe/reciepe.page.html
+++ b/src/app/home/reciepe/reciepe.page.html
@@ -1,12 +1,10 @@
-
-<h1>Hello world</h1>
-<ion-header>
-  <ion-toolbar>
-    <ion-back-button color="warning" slot="start"></ion-back-button>
-    <ion-title>Reciepe</ion-title>
-    <h3>{{reciepe.name}}</h3>
-  </ion-toolbar>
-</ion-header>
+<div *ngIf="reciepe">
+  <ion-header>
+    <ion-toolbar>
+      <ion-back-button color="warning" slot="start"></ion-back-button>
+      <h3>{{reciepe.titre}}</h3>
+    </ion-toolbar>
+  </ion-header>
 
 <ion-content>
 
@@ -34,8 +32,11 @@
       <ion-item>
         <p>{{ reciepe.description }}</p>
       </ion-item>
+    <div>
+
+</div>
+
     </div>
   </div>
-
-
 </ion-content>
+</div>
