--- a/src/app/home/reciepe/reciepe.page.html
+++ b/src/app/home/reciepe/reciepe.page.html
@@ -2,41 +2,55 @@
   <ion-header>
     <ion-toolbar>
       <ion-back-button color="warning" slot="start"></ion-back-button>
-      <h3>{{reciepe.titre}}</h3>
+      <img class="post_img" src="{{ reciepe.image }}">
     </ion-toolbar>
   </ion-header>
 
 <ion-content>
 
-  <div>
-    <div *ngFor="let reciepe of reciepes">
-      <img class="post_img" src="{{ reciepe.photo }}">
-      <ion-item lines="none">
-        <h2>{{ reciepe.title }}</h2>
-      </ion-item>
-      <ion-item>
-        <p>{{ reciepe.subtitle }}</p>
-      </ion-item>
-      <ion-item style="display: flex">
-        <ion-list lines="none">
-          <ion-item>{{ reciepe.time }}</ion-item>
-          <ion-item>{{ reciepe.preparation }}</ion-item>
-          <ion-item>{{ reciepe.preparation }}</ion-item>
-        </ion-list>
-        <ion-list lines="none">
-          <ion-item>{{ reciepe.time }}</ion-item>
-          <ion-item>{{ reciepe.calories }}</ion-item>
-          <ion-item>{{ reciepe.level }}</ion-item>
-        </ion-list>
-      </ion-item>
-      <ion-item>
-        <p>{{ reciepe.description }}</p>
-      </ion-item>
-    <div>
+  <h2>{{ reciepe.titre }}</h2>
+  <p>{{ reciepe.description }}</p>
 
-</div>
+  <ion-item>
+            <ion-list lines="none">
+              <ion-item>35 min.</ion-item>
+              <ion-item>Préparation</ion-item>
+              <ion-item>Temps de cuisson</ion-item>
+            </ion-list>
+            <ion-list lines="none">
+              <ion-item>90 min.</ion-item>
+              <ion-item>1616</ion-item>
+              <ion-item>Difficulté</ion-item>
+            </ion-list>
+  </ion-item>
 
-    </div>
-  </div>
+
+
+<!--  <div>-->
+<!--    <div *ngFor="let reciepe of reciepes">-->
+<!--      <img class="post_img" src="{{ reciepe.photo }}">-->
+<!--      <ion-item lines="none">-->
+<!--        <h2>{{ reciepe.title }}</h2>-->
+<!--      </ion-item>-->
+<!--      <ion-item>-->
+<!--        <p>{{ reciepe.subtitle }}</p>-->
+<!--      </ion-item>-->
+<!--      <ion-item style="display: flex">-->
+<!--        <ion-list lines="none">-->
+<!--          <ion-item>{{ reciepe.time }}</ion-item>-->
+<!--          <ion-item>{{ reciepe.preparation }}</ion-item>-->
+<!--          <ion-item>{{ reciepe.preparation }}</ion-item>-->
+<!--        </ion-list>-->
+<!--        <ion-list lines="none">-->
+<!--          <ion-item>{{ reciepe.time }}</ion-item>-->
+<!--          <ion-item>{{ reciepe.calories }}</ion-item>-->
+<!--          <ion-item>{{ reciepe.level }}</ion-item>-->
+<!--        </ion-list>-->
+<!--      </ion-item>-->
+<!--      <ion-item>-->
+<!--        <p>{{ reciepe.description }}</p>-->
+<!--      </ion-item>-->
+<!--    </div>-->
+<!--  </div>-->
 </ion-content>
 </div>
