--- a/src/app/home/tv_shows/show/show.page.html
+++ b/src/app/home/tv_shows/show/show.page.html
@@ -8,7 +8,7 @@
 <ion-content>
 
   <h1 *ngIf="show">{{ show.name }}</h1>
-  <h2 *ngIf="candidateOftheShow">{{ candidateOftheShow.tv_show }}</h2>
+<!--  <h2 *ngIf="candidateOftheShow">{{ candidateOftheShow.tv_show }}</h2>-->
   <ion-buttons slot="start">
     <ion-button color="dark">
       <ion-icon slot="icon-only" name="camera"></ion-icon>
@@ -17,10 +17,11 @@
 
   <div class="stories">
 
+<!--    Etape 1 : boucle sur le tableau des candidats   -->
     <div *ngFor="let candidate of candidates">
       <div>
         <div class="story">
-          <div class="img-box" (click)="openShowCandidateById()">
+          <div class="img-box">
             <img src="{{ candidate.image }}">
           </div>
           <p>{{ candidate.firstname }}</p>
@@ -37,7 +38,7 @@
       <ion-icon slot="end" name="more"></ion-icon>
     </ion-item>
     <div >
-      <img class="post_img" src="{{ reciepe.image }}" >
+      <img class="post_img" src="{{ reciepe.image }}">
       <div class="flex-button">
         <div>
           <ion-icon name="heart"></ion-icon>
