--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -10,7 +10,7 @@
       <ion-icon name="add"></ion-icon>
     </ion-tab-button>
 
-  <ion-tab-button tab="signIn">
+  <ion-tab-button tab="sign_in">
     <ion-icon name="person"></ion-icon>
   </ion-tab-button>
 
