--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -2,7 +2,7 @@
 
   <ion-tab-bar color="light" slot="bottom">
 
-    <ion-tab-button tab="welcome">
+    <ion-tab-button tab="shows">
       <ion-icon name="home"></ion-icon>
     </ion-tab-button>
 
@@ -10,10 +10,10 @@
       <ion-icon name="add"></ion-icon>
     </ion-tab-button>
 
-  <ion-tab-button tab="sign_in">
-    <ion-icon name="person"></ion-icon>
-  </ion-tab-button>
+    <ion-tab-button tab="sign_in">
+      <ion-icon name="person"></ion-icon>
+    </ion-tab-button>
 
-</ion-tab-bar>
+  </ion-tab-bar>
 
 </ion-tabs>
